# dolfinx-gpu-solvers

./: README.md
demo_cudss/: CMakeLists.txt  dolfinx_cudss.h  dolfinx_cusparse.h  main.cpp  poisson.py
dolfinx-gpu/: LICENSE  README.md
dolfinx-gpu/cpp/demo/ginkgo/: CMakeLists.txt  main.cpp  poisson.py
dolfinx-gpu/cpp/demo/heat_equation/: CMakeLists.txt  README.md  heat.py  main.cpp
dolfinx-gpu/cpp/demo/mat_assembly/: CMakeLists.txt  laplacian.h  main.cpp  sparsity.cpp  sparsity.h
dolfinx-gpu/cpp/demo/petsc_hypre/: CMakeLists.txt  README.md  gpu_petsc.h  main.cpp  poisson.py
dolfinx-gpu/cpp/include/: gpu_cudss.h  gpu_cusparse.h  gpu_geometry.h  gpu_hipsparse.h
dolfinx-gpu/python/: CMakeLists.txt  README.md  pyproject.toml
dolfinx-gpu/python/demo/: demo_gpu.py
dolfinx-gpu/python/dolfinx_gpu/: __init__.py
dolfinx-gpu/python/wrappers/: gpu.cu
