# NOTE: The DOLFINx_GPU Python interface must be built without build
# isolation (PEP517) due to its runtime and build time dependencies.

[build-system]
requires = ["scikit-build-core[pyproject]>=0.10", "nanobind>=2.5.0"]
build-backend = "scikit_build_core.build"

[project]
name = "fenics-dolfinx-gpu"
version = "0.1.0.dev0"
description = "DOLFINx Python GPU interface"
readme = "README.md"
requires-python = ">=3.10.0"
license = { file = "../LICENSE" }
authors = [
      { email = "fenics-steering-council@googlegroups.com" },
      { name = "FEniCS Steering Council" },
]
dependencies = [
      "numpy>=1.21",
      "fenics-dolfinx>=0.11.0.dev0",
]

[tool.scikit-build]
wheel.packages = ["dolfinx_gpu"]
sdist.exclude = ["*.cpp"]
cmake.build-type = "Release"
wheel.license-files = ["../LICENSE*"]
